--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=CyberDump
 server.port:8081
+
+
+-- spring.jpa.driverClassName=org.sqlite.JDBC
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:src/main/resources/CyberDB
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.properties.hibernate.default_schema="cyberDB"
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
